--- a/common/service/pom.xml
+++ b/common/service/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.raisnc</groupId>
+        <groupId>org.rainsc</groupId>
         <artifactId>common</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -20,14 +20,14 @@
 
         <!-- common-util模块 -->
         <dependency>
-            <groupId>org.raisnc</groupId>
+            <groupId>org.rainsc</groupId>
             <artifactId>utils</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
         <!-- spzx-model模块 -->
         <dependency>
-            <groupId>org.raisnc</groupId>
+            <groupId>org.rainsc</groupId>
             <artifactId>model</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
