--- a/manager/pom.xml
+++ b/manager/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.raisnc</groupId>
+        <groupId>org.rainsc</groupId>
         <artifactId>spzx-server</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -45,7 +45,7 @@
 
         <!-- common-service依赖 -->
         <dependency>
-            <groupId>org.raisnc</groupId>
+            <groupId>org.rainsc</groupId>
             <artifactId>service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
