--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -9,12 +9,12 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common</artifactId>
+    <groupId>org.raisnc</groupId>
+    <artifactId>service-client</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>common-utils</module>
-        <module>common-service</module>
-        <module>log</module>
+        <module>service-product-client</module>
+        <module>service-user-client</module>
     </modules>
 
     <properties>
@@ -22,14 +22,5 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.5.2</version>
-        </dependency>
-    </dependencies>
-
 
 </project>
