--- a/service-client/service-user-client/pom.xml
+++ b/service-client/service-user-client/pom.xml
@@ -4,32 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.rainsc</groupId>
-        <artifactId>spzx-server</artifactId>
+        <groupId>org.raisnc</groupId>
+        <artifactId>service-client</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>common</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>common-utils</module>
-        <module>common-service</module>
-        <module>log</module>
-    </modules>
+    <artifactId>service-user-client</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-all</artifactId>
-            <version>5.5.2</version>
-        </dependency>
-    </dependencies>
-
 
 </project>
