--- a/service/service-product/src/main/resources/application-dev.yml
+++ b/service/service-product/src/main/resources/application-dev.yml
@@ -4,10 +4,10 @@ server:
 spring:
   application:
     name: service-product
-  cloud:
-    nacos:
-      discovery:
-        server-addr: localhost:8848
+#  cloud:
+#    nacos:
+#      discovery:
+#        server-addr: localhost:8848
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
