--- a/service/service-product/src/main/resources/application-dev.yml
+++ b/service/service-product/src/main/resources/application-dev.yml
@@ -14,6 +14,10 @@ spring:
     url: jdbc:mysql://localhost:3306/db_spzx?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
     username: root
     password: root
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
 
 mybatis:
   config-location: classpath:mybatis-config.xml
